syntax = "proto3";
package casper.v1;

// If you are building for other languages "scalapb.proto"
// can be manually obtained here:
// https://raw.githubusercontent.com/scalapb/ScalaPB/master/protobuf/scalapb/scalapb.proto
// make a scalapb directory in this file's location and place it inside

// import "scalapb/scalapb.proto";
import "DeployServiceV1.proto";

// option (scalapb.options) = {
//   package_name: "coop.rchain.casper.protocol.propose.v1"
//   flat_package: true
//   single_file: true
//   preserve_unknown_fields: false
// };

service ProposeService {
  rpc propose(PrintUnmatchedSendsQuery) returns (ProposeResponse) {}
}

message PrintUnmatchedSendsQuery {
  bool printUnmatchedSends = 1;
}

message ProposeResponse {
  oneof message {
    deployv1.ServiceError error = 1;
    string result      = 2;
  }
}

message ServiceError {
  repeated string messages = 1;
}
